--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Hero from "../components/Hero.astro";
 import TopBar from "../components/TopBar.tsx";
 import Layout from "../layouts/Layout.astro";
 ---
@@ -15,4 +16,5 @@ import Layout from "../layouts/Layout.astro";
 -->
 <Layout title="eJam Test Assignment">
   <TopBar client:visible />
+  <Hero />
 </Layout>
