initialized product component, missing responsive styles

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import norton from "../assets/images/norton.svg";
     <h1 class="capitalize text-4xl md:text-5xl">
       wait! your order in progress.
     </h1>
-    <h3 class="capitalize text-sm md:text-xl text-light-gray">
+    <h3 class="capitalize text-sm md:text-xl text-default-gray">
       Lorem ipsum dolor sit amet, consectetur adipiscing
     </h3>
   </div>
